@@ -17,13 +17,7 @@
 
 {deps,
   [
-    { lwes,
-      "4.6.1",
-      {git, "git://github.com/lwes/lwes-erlang.git", {tag, "4.6.1"}}
-    },
-    { parse_trans,
-      "3.2.0",
-      {git, "git://github.com/uwiger/parse_trans.git", {tag, "3.2.0"} }
-    }
+    { lwes, {git, "git://github.com/lwes/lwes-erlang.git", {tag, "4.7.1"}} },
+    { parse_trans, {git, "git://github.com/uwiger/parse_trans.git", {tag, "3.2.0"} } }
   ]
 }.
